# Oxide-VST

./: .gitignore  CMakeLists.txt  CustomLookAndFeel.h  DistortionAudioProcessor.cpp  DistortionAudioProcessor.h  DistortionAudioProcessorEditor..h  DistortionAudioProcessorEditor.cpp  JucePluginDefines.h  Makefile  Parameters.h  README.md  cmake_install.cmake  compile_scss.sh
Resources/: controlPanel.html  header.html  meter.html
Source/: ControlPanel.h  DistortionProcessor.cpp  DistortionProcessor.h  Main.cpp  MainComponent.cpp  MainComponent.h  MeterView.cpp  MeterView.h
Source/Core/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
Source/FX/Distortion/: DistortionProcessor.cpp
Source/UI/: Background.h  ControlPanel.cpp  HeaderView.cpp  HeaderView.h  MeterView.cpp  MeterView.h
documentation/: popping-in-pulse.md  web-component-styling.md
presets/: Ambient Wash.xml  Analog Crush.xml  Default.xml  Drum Cruncher.xml  Fuzz.xml  Guitar Sizzle.xml  Heavy Metal.xml  Light Drive.xml  Lo-Fi Charm.xml  Rhythmic Grind.xml  Subtle Texture.xml  Synth Destroyer.xml  Vocal Enhancer.xml  Warm Tape.xml
src/core/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/delay/: DelayProcessor.cpp  DelayProcessor.h
src/dsp/distortion/: DistortionProcessor.cpp  DistortionProcessor.h
src/dsp/filter/: FilterProcessor.cpp  FilterProcessor.h
src/dsp/pulse/: PulseProcessor.cpp  PulseProcessor.h
src/resources/: controlPanel.html  fx-delay.html  header.html  layout.html  layout.scss  meter.html  meters.html  oscilloscope.html  theme.scss
src/resources/scss/: _common.scss  _controls.scss  _global.scss  _header.scss  _knobs.scss  _layout-header.scss  _metering.scss  _meters.scss  _oscilloscope.scss  _theme.scss  _toggle.scss  _tooltip.scss  control-panel.scss  fx-delay.scss  global.scss  header.scss  meters.scss  oscilloscope.scss
src/ui/: Background.h  ControlPanel.cpp  ControlPanel.h  CustomFonts.h  DelayControlPanel.cpp  DelayControlPanel.h  HeaderView.cpp  HeaderView.h  LayoutView.cpp  LayoutView.h  MeterView.cpp  MeterView.h  OscilloscopeView.cpp  OscilloscopeView.h
